--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="https://unpkg.com/@triply/yasgui/build/yasgui.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://unpkg.com/@triply/yasgui/build/yasgui.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/@triply/yasgui@4.2.28/build/yasgui.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@triply/yasgui@4.2.28/build/yasgui.min.js"></script>
     <title>SPARQL Endpoint</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     <header>
         <div id="logo">
             <a href="/">
-                <img src="https://www.ehri-project.eu/sites/all/themes/zenehri/images/logo.png" alt="EHRI's logo">
+                <div id="logoWrapper"></div>
             </a>
         </div>
     </header>
@@ -27,14 +27,9 @@
           copyEndpointOnNewTab: false,
         });
     </script>
-    <style>
-      .yasgui .autocompleteWrapper {
-        display: none !important;
-      }
-    </style>
     <footer>
         <div>
-            <span>&copy; <a href="https://www.ehri-project.eu/">EHRI project</a> 2022</span>
+            <span>&copy; <a href="https://www.ehri-project.eu/">EHRI project</a> 2022-now</span>
         </div>
     </footer>
 </div>
